feat(LearningFacade): AxisAction → AxisTopic 도메인/스키마 v2 전환
단일 동사 강제(AxisAction) 모델을 폐기하고 명사구 + 선택 설명(AxisTopic)
모델로 일괄 전환합니다. v1에 LearningFacade 관련 Flyway 마이그레이션이
존재하지 않아 V2를 신규 생성 마이그레이션으로 도입합니다.

## 변경 요약

도메인:
- 신규: AxisTopic, TopicMaterial
- 변경: LearningAxis(actions→topics, addTopic/removeTopic),
        LearningMaterial(actionMappings→topicMappings, MATERIAL_TYPE_REQUIRED 검증),
        CoverageStatus(설명 v2화), ConceptChangeRecord(isChanged() 노출)
- 삭제: AxisAction, ActionMaterial, ActionRevision, ActionChangeRecord,
        RevisionReasonOption, VerbFormValidator

ErrorCode:
- 추가: LEARNING_AXIS_TOPIC_NOT_FOUND/NAME_BLANK,
        LEARNING_MATERIAL_NAME_BLANK/TYPE_REQUIRED,
        LEARNING_TOPIC_MATERIAL_ALREADY_LINKED/NOT_LINKED
- 제거: LEARNING_AXIS_ACTION_*, LEARNING_ACTION_MATERIAL_*,
        REVISION_REASON_NOT_FOUND

Persistence:
- 신규: AxisTopicRepository(Port/Adapter/Jpa),
        TopicMaterialRepository(Port/Adapter/Jpa),
        LearningMaterialRepositoryAdapter (기존 누락된 어댑터 보강)
- 삭제: Action*Repository*, RevisionReasonOption*Repository*

Migration:
- V2__learning_facade.sql 신규 (LearningFacade BC 5개 테이블 fresh 생성)

Application/Presentation:
- CoverageRecalculator: 실제 로직 구현(NO_MATERIAL/PARTIAL/COVERED)
- LearningFacadeCommandService: addTopic/updateTopic/removeTopic + concept/axis v2화
- LearningMaterialCommandService: linkTopic/unlinkTopic + 숙련도 변경 시 영향 주제 재계산
- LearningFacadeQueryService: 슬림화 (revisions/reasonOptions 제거)
- Controller: /actions/** → /topics/** 전환, revision 엔드포인트 제거
- DTO: TopicItem/AddTopic/UpdateTopic, LinkedTopicItem/TopicCoverageItem,
       coverageSummary/isAxisCountExceedsRecommended/isCardCreationSuggested

테스트:
- 신규: AxisTopicTest, AxisTopicRepositoryTest, TopicMaterialRepositoryTest,
        CoverageRecalculatorTest
- 재작성: LearningAxisTest(v2 topic 기반)
- 수정: LearningFacadeTest/LearningMaterialTest (getTopics/getTopicMappings)
- 삭제: AxisActionTest, ActionMaterialTest, ActionChangeRecordTest,
        ActionMaterialRepositoryTest

Co-Autho