@@ -3,15 +3,15 @@ package com.example.thirdtool.LearningFacade.application.service;
 import com.example.thirdtool.Common.Exception.ErrorCode.ErrorCode;
 import com.example.thirdtool.LearningFacade.domain.exception.LearningFacadeDomainException;
 import com.example.thirdtool.LearningFacade.domain.model.*;
-import com.example.thirdtool.LearningFacade.infrastructure.persistence.ActionMaterialRepository;
 import com.example.thirdtool.LearningFacade.infrastructure.persistence.LearningFacadeRepository;
 import com.example.thirdtool.LearningFacade.infrastructure.persistence.LearningMaterialRepository;
-import com.example.thirdtool.LearningFacade.presentation.dto.LearningMaterialResponse;
+import com.example.thirdtool.LearningFacade.infrastructure.persistence.TopicMaterialRepository;
 import com.example.thirdtool.LearningFacade.presentation.dto.LearningMaterialResponse.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,51 +21,49 @@ public class LearningMaterialCommandService {
 
     private final LearningFacadeRepository facadeRepository;
     private final LearningMaterialRepository materialRepository;
-    private final ActionMaterialRepository actionMaterialRepository;
+    private final TopicMaterialRepository topicMaterialRepository;
     private final CoverageRecalculator coverageRecalculator;
 
     // ──────────────────────────────────────────────────────
-    // 13. 학습 자료 등록
+    // 12. 학습 자료 등록
     // ──────────────────────────────────────────────────────
 
     @Transactional
     public CreateMaterial createMaterial(Long userId, String name, MaterialType materialType,
-                                         String url, List<Long> linkedActionIds) {
+                                         String url, List<Long> linkedTopicIds) {
         LearningFacade facade = loadFacade(userId);
         LearningMaterial material = LearningMaterial.create(facade, name, materialType, url);
         materialRepository.save(material);
 
-        // 행동 연결 + 커버리지 재계산
-        if (linkedActionIds != null && !linkedActionIds.isEmpty()) {
-            for (Long actionId : linkedActionIds) {
-                AxisAction action = findActionInFacade(facade, actionId);
-                ActionMaterial mapping = ActionMaterial.create(action, material);
-                actionMaterialRepository.save(mapping);
-                coverageRecalculator.recalculate(action);
+        if (linkedTopicIds != null && !linkedTopicIds.isEmpty()) {
+            for (Long topicId : linkedTopicIds) {
+                AxisTopic topic = findTopicInFacade(facade, topicId);
+                TopicMaterial mapping = TopicMaterial.create(topic, material);
+                topicMaterialRepository.save(mapping);
+                coverageRecalculator.recalculate(topic);
             }
         }
 
-        // 최신 매핑 포함 재로딩
         LearningMaterial saved = materialRepository.findById(material.getId())
-                                                   .orElseThrow(() -> LearningFacadeDomainException.of(ErrorCode.LEARNING_MATERIAL_NOT_FOUND));
+                .orElseThrow(() -> LearningFacadeDomainException.of(ErrorCode.LEARNING_MATERIAL_NOT_FOUND));
         return CreateMaterial.of(saved);
     }
 
     // ──────────────────────────────────────────────────────
-    // 14. 학습 자료 목록 조회
+    // 13. 학습 자료 목록 조회
     // ──────────────────────────────────────────────────────
 
     @Transactional(readOnly = true)
     public List<MaterialSummary> getMaterials(Long userId) {
         LearningFacade facade = loadFacade(userId);
         return materialRepository.findByFacadeId(facade.getId())
-                                 .stream()
-                                 .map(MaterialSummary::of)
-                                 .collect(Collectors.toList());
+                .stream()
+                .map(MaterialSummary::of)
+                .collect(Collectors.toList());
     }
 
     // ──────────────────────────────────────────────────────
-    // 15. 자료 이름 수정
+    // 14. 자료 이름 수정
     // ──────────────────────────────────────────────────────
 
     @Transactional
@@ -76,13 +74,12 @@ public class LearningMaterialCommandService {
     }
 
     // ──────────────────────────────────────────────────────
-    // 16. 숙련도 자가 평가 수정
+    // 15. 숙련도 자가 평가 수정
     // ──────────────────────────────────────────────────────
 
     @Transactional
     public UpdateProficiency updateProficiency(Long userId, Long materialId,
                                                ProficiencyLevel newLevel) {
-        // UNRATED 복귀 차단 — Application Service 책임
         if (newLevel == ProficiencyLevel.UNRATED) {
             throw LearningFacadeDomainException.of(
                     ErrorCode.LEARNING_MATERIAL_PROFICIENCY_UNRATED_NOT_ALLOWED);
@@ -91,99 +88,87 @@ public class LearningMaterialCommandService {
         LearningMaterial material = loadMaterial(materialId, userId);
         material.updateProficiencyLevel(newLevel);
 
-        // 연결된 모든 행동의 커버리지 재계산
-        List<ActionCoverageItem> updatedCoverages = material.getActionMappings().stream()
-                                                            .map(mapping -> {
-                                                                AxisAction action = mapping.getAction();
-                                                                CoverageStatus newStatus = coverageRecalculator.recalculate(action);
-                                                                return ActionCoverageItem.of(action);
-                                                            })
-                                                            .collect(Collectors.toList());
+        List<TopicCoverageItem> updatedCoverages = material.getTopicMappings().stream()
+                .map(mapping -> {
+                    AxisTopic topic = mapping.getTopic();
+                    coverageRecalculator.recalculate(topic);
+                    return TopicCoverageItem.of(topic);
+                })
+                .collect(Collectors.toList());
 
         return UpdateProficiency.of(material, updatedCoverages);
     }
 
     // ──────────────────────────────────────────────────────
-    // 17. 행동-자료 연결 추가
+    // 16. 주제-자료 연결 추가
     // ──────────────────────────────────────────────────────
 
     @Transactional
-    public LinkedActions linkAction(Long userId, Long materialId, Long actionId) {
+    public LinkedTopics linkTopic(Long userId, Long materialId, Long topicId) {
         LearningMaterial material = loadMaterial(materialId, userId);
 
-        if (actionMaterialRepository.existsByActionIdAndMaterialId(actionId, materialId)) {
+        if (topicMaterialRepository.existsByTopicIdAndMaterialId(topicId, materialId)) {
             throw LearningFacadeDomainException.of(
-                    ErrorCode.LEARNING_ACTION_MATERIAL_ALREADY_LINKED);
+                    ErrorCode.LEARNING_TOPIC_MATERIAL_ALREADY_LINKED);
         }
 
         LearningFacade facade = loadFacade(userId);
-        AxisAction action = findActionInFacade(facade, actionId);
+        AxisTopic topic = findTopicInFacade(facade, topicId);
 
-        ActionMaterial mapping = ActionMaterial.create(action, material);
-        actionMaterialRepository.save(mapping);
-        coverageRecalculator.recalculate(action);
+        TopicMaterial mapping = TopicMaterial.create(topic, material);
+        topicMaterialRepository.save(mapping);
+        coverageRecalculator.recalculate(topic);
 
-        // 최신 매핑 포함 재로딩
         LearningMaterial reloaded = materialRepository.findById(materialId)
-                                                      .orElseThrow(() -> LearningFacadeDomainException.of(ErrorCode.LEARNING_MATERIAL_NOT_FOUND));
-        return LinkedActions.of(reloaded);
+                .orElseThrow(() -> LearningFacadeDomainException.of(ErrorCode.LEARNING_MATERIAL_NOT_FOUND));
+        return LinkedTopics.of(reloaded);
     }
 
     // ──────────────────────────────────────────────────────
-    // 18. 행동-자료 연결 해제
+    // 17. 주제-자료 연결 해제
     // ──────────────────────────────────────────────────────
 
     @Transactional
-    public UnlinkAction unlinkAction(Long userId, Long materialId, Long actionId) {
-        loadMaterial(materialId, userId);   // 소유권 + 존재 검증
+    public UnlinkTopic unlinkTopic(Long userId, Long materialId, Long topicId) {
+        loadMaterial(materialId, userId);
 
-        ActionMaterial mapping = actionMaterialRepository
-                .findByActionIdAndMaterialId(actionId, materialId)
+        TopicMaterial mapping = topicMaterialRepository
+                .findByTopicIdAndMaterialId(topicId, materialId)
                 .orElseThrow(() -> LearningFacadeDomainException.of(
-                        ErrorCode.LEARNING_ACTION_MATERIAL_NOT_LINKED));
+                        ErrorCode.LEARNING_TOPIC_MATERIAL_NOT_LINKED));
 
-        AxisAction action = mapping.getAction();
-        actionMaterialRepository.delete(mapping);
+        AxisTopic topic = mapping.getTopic();
+        topicMaterialRepository.delete(mapping);
 
-        // 남은 매핑 기준으로 커버리지 재계산
-        CoverageStatus newStatus = coverageRecalculator.recalculate(action);
+        coverageRecalculator.recalculate(topic);
 
-        // 남은 연결 목록 조회
-        List<ActionMaterial> remaining = actionMaterialRepository.findByActionId(action.getId());
-        List<LinkedActionSummary> remainingActions = remaining.stream()
-                                                              .map(m -> {
-                                                                  AxisAction a = m.getAction();
-                                                                  return new LinkedActionSummary(
-                                                                          a.getId(), a.getDescription(),
-                                                                          a.getAxis().getId(), a.getAxis().getName());
-                                                              })
-                                                              .collect(Collectors.toList());
+        List<TopicMaterial> remaining = topicMaterialRepository.findByMaterialId(materialId);
+        List<LinkedTopicSummary> remainingTopics = remaining.stream()
+                .map(LinkedTopicSummary::of)
+                .collect(Collectors.toList());
 
-        return new UnlinkAction(
+        return new UnlinkTopic(
                 materialId,
-                actionId,
-                ActionCoverageItem.of(action),
-                remainingActions
+                topicId,
+                TopicCoverageItem.of(topic),
+                remainingTopics
         );
     }
 
     // ──────────────────────────────────────────────────────
-    // 19. 학습 자료 삭제
+    // 18. 학습 자료 삭제
     // ──────────────────────────────────────────────────────
 
     @Transactional
     public void deleteMaterial(Long userId, Long materialId) {
         LearningMaterial material = loadMaterial(materialId, userId);
 
-        // 삭제 전 영향받는 행동 목록 수집 (cascade 삭제 후 접근 불가)
-        List<AxisAction> affectedActions = material.getActionMappings().stream()
-                                                   .map(ActionMaterial::getAction)
-                                                   .collect(Collectors.toList());
+        List<AxisTopic> affectedTopics = new ArrayList<>(material.getTopicMappings().stream()
+                .map(TopicMaterial::getTopic)
+                .toList());
 
         materialRepository.delete(material);
-        // orphanRemoval이 ActionMaterial을 함께 삭제한다.
-        // 각 행동의 커버리지 재계산 (남은 매핑 기준)
-        affectedActions.forEach(coverageRecalculator::recalculate);
+        affectedTopics.forEach(coverageRecalculator::recalculate);
     }
 
     // ──────────────────────────────────────────────────────
@@ -192,25 +177,24 @@ public class LearningMaterialCommandService {
 
     private LearningFacade loadFacade(Long userId) {
         return facadeRepository.findByUserId(userId)
-                               .orElseThrow(() -> LearningFacadeDomainException.of(ErrorCode.LEARNING_FACADE_NOT_FOUND));
+                .orElseThrow(() -> LearningFacadeDomainException.of(ErrorCode.LEARNING_FACADE_NOT_FOUND));
     }
 
     private LearningMaterial loadMaterial(Long materialId, Long userId) {
         LearningMaterial material = materialRepository.findById(materialId)
-                                                      .orElseThrow(() -> LearningFacadeDomainException.of(ErrorCode.LEARNING_MATERIAL_NOT_FOUND));
+                .orElseThrow(() -> LearningFacadeDomainException.of(ErrorCode.LEARNING_MATERIAL_NOT_FOUND));
         if (!material.getFacade().getUser().getId().equals(userId)) {
             throw LearningFacadeDomainException.of(ErrorCode.LEARNING_FACADE_NOT_FOUND);
         }
         return material;
     }
 
-    /** facade 전체를 순회해 actionId로 AxisAction을 찾는다. */
-    private AxisAction findActionInFacade(LearningFacade facade, Long actionId) {
+    private AxisTopic findTopicInFacade(LearningFacade facade, Long topicId) {
         return facade.getAxes().stream()
-                     .flatMap(axis -> axis.getActions().stream())
-                     .filter(a -> a.getId().equals(actionId))
-                     .findFirst()
-                     .orElseThrow(() -> LearningFacadeDomainException.of(
-                             ErrorCode.LEARNING_AXIS_ACTION_NOT_FOUND));
+                .flatMap(axis -> axis.getTopics().stream())
+                .filter(t -> t.getId().equals(topicId))
+                .findFirst()
+                .orElseThrow(() -> LearningFacadeDomainException.of(
+                        ErrorCode.LEARNING_AXIS_TOPIC_NOT_FOUND));
     }
 }
